Small bucks. Image dispatcher should decode URLs in the filename header. main.css moved post padding to post margin to condense space. Fixed edge issue where cites would get stuck on the page.

--- a/public/static/css/app/main.css
+++ b/public/static/css/app/main.css
@@ -2438,8 +2438,8 @@ main.index-threaded {
 				}
 		
 		.reply {
-			margin: 0;
-			padding: 0.25em 0 0.25em 1.5em;
+			padding: 0;
+			margin: 0.25em 0 0.25em 1.5em;
 			white-space: nowrap;
 		}
 			.reply::before {
